fixed photo sizing
sizing was too large but adjusted them through css format

--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,56 @@
 @media (min-width: 1025px) {
   /* Styles for large screens */
 }
+
+body {
+  /* max-width: 940px; Set a maximum width */
+  margin: 0 auto; /*Center the content*/
+  padding: 20px; /*Add some padding*/
+}
+
+.carousel-wrapper {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  padding: 20px;
+}
+
+.slick-slider {
+  width: 80%;
+  max-width: 1000px;
+} 
+
+.slick-slider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.slick-slider img {
+  margin-top: 25px;
+  width: 100%;
+  height: 100%;
+  max-width: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* object-fit: cover; */
+}
+
+/* .image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+} */
+
+.link-images {
+  margin-top: 25px;
+  width: 50%;
+  height: 50%;
+  object-fit: cover;
+  overflow: hidden;
+}
